css first exercise

--- a/CSS3/primeiro_css/index.html
+++ b/CSS3/primeiro_css/index.html
@@ -11,10 +11,10 @@
     <h1>Júpiter</h1>
     <h4>Lista de luas:</h4>
     <ul>
-      <li>Métis</li>
+      <li class="bigger-blue-text">Métis</li>
       <li>Andrasteia</li>
-      <li>Amalteia</li>
-      <li>Tebe</li>
+      <li class="bigger-blue-text">Amalteia</li>
+      <li id="tebe-text">Tebe</li>
       <li>Io</li>
     </ul>
   </body>
