--- a/CSS Moderno/responsividade/index.html
+++ b/CSS Moderno/responsividade/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <img src="./imagens/01.jpg" alt="img-01" class="img-content" />
+    <h1 class="title-content">Título 1</h1>
     <p class="text-content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores,
       eaque repellat ut mollitia modi beatae facere ab facilis eos veniam iusto
@@ -16,12 +17,14 @@
       distinctio, eius repellat!
     </p>
     <img src="./imagens/02.jpg" alt="img-02" class="img-content" />
+    <h1 class="title-content">Título 2</h1>
     <p class="text-content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi accusamus
       ipsum voluptatum. Amet, veritatis, exercitationem illum, maiores facere
       ipsam aut odio corporis consequatur velit quis?
     </p>
     <img src="./imagens/03.jpg" alt="img-03" class="img-content" />
+    <h1 class="title-content">Título 3</h1>
     <p class="text-content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illo
       accusantium recusandae autem fugit culpa.
